[package]
name = "picture-frame-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["env", "derive"] }
jiff = "0.2.28"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
